--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon dist/api.bundle.js",
-    "build": "webpack"
+    "dev": "concurrently \"webpack\" \"nodemon dist/api.bundle.js\" "
   },
   "author": "Klupzor",
   "license": "MIT",
@@ -15,6 +14,7 @@
     "mongoose": "^5.1.2"
   },
   "devDependencies": {
+    "concurrently": "^3.5.1",
     "nodemon": "^1.17.5",
     "webpack": "^4.9.1",
     "webpack-cli": "^2.1.4",
