--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"webpack\" \"nodemon dist/api.bundle.js\" "
+    "dev": "nodemon src/index.js",
+    "build": "webpack"
   },
   "author": "Klupzor",
   "license": "MIT",
